--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Bootstrap Template</title>
+  <title>My Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -27,13 +27,10 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Personal
-  * Updated: Jun 18 2023 with Bootstrap v5.3.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  <!-- Link Swiper's CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+
+
 </head>
 
 <body>
@@ -51,7 +48,6 @@
         <ul>
           <li><a class="nav-link active" href="#header">Bosh Sahifa</a></li>
           <li><a class="nav-link" href="#about">Men Haqimda</a></li>
-          <li><a class="nav-link" href="#resume">Rezyume</a></li>
           <li><a class="nav-link" href="#services">Xizmatlarim</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Aloqa</a></li>
@@ -84,10 +80,6 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Frontend Dasturchi</h3>
-          <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
-          </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
@@ -98,12 +90,13 @@
             </div>
             <div class="col-lg-6">
               <ul>
+                <li><i class="bi bi-chevron-right"></i> <strong>Tajriba:</strong> <span>1-Yil Praktika</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Yosh:</strong> <span>18</span></li>
               </ul>
             </div>
           </div>
           <p>
-            Xozirda Urganch Shaxri URDU Universitetda Kompyuter Dasturlash Va Fizik assoslari boyicha 2 Kurs Talabasiman 17 Yoshimda Urgannch Shaxri Data Learing Center Oquv Markazida Frontend Dasturlash boyicha 6 Oylik Oquv Kursini Btrganman va Sertefikat qolga kritganman Bosh vahtimda Frontend boyicha Praktika qlaman. Rus Tilini blaman Inglis Tilini xozrcha yoq. Ish joyim yoq 
+             17 Yoshimda Urgannch Shaxri Data Talim Stansiyasida Frontend Dasturlash boyicha 6 Oylik Oquv Kursini Btrganman. Sertefikatga egaman. Bosh vahtimda Frontend boyicha Praktika qlaman. Rus Tilini blaman. Ish joyim yoq 
           </p>
         </div>
       </div>
@@ -176,34 +169,6 @@
 
   </section><!-- End About Section -->
 
-  <!-- ======= Resume Section ======= -->
-  <section id="resume" class="resume">
-    <div class="container">
-
-      <div class="section-title">
-        <h2>Rezyume</h2>
-        <p>Mening rezyumeimni tekshiring</p>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-6">
-          <h3 class="resume-title">Xulosa</h3>
-          <div class="resume-item pb-0">
-            <h4>Farid Qurbonboyev</h4>
-            <p><em>HTML, CSS, SCSS, JS, REACT-JS, Ortacha blimga egaman.</em></p>
-            <p>
-            <ul>
-              <li>+998 99 105 4313</li>
-              <li>faridbek0117@gmail.com</li>
-            </ul>
-            </p>
-          </div>
-
-        </div>
-      </div>
-
-    </div>
-  </section><!-- End Resume Section -->
 
   <!-- ======= Services Section ======= -->
   <section id="services" class="services">
@@ -225,30 +190,17 @@
         <p>My Works</p>
       </div>
 
-      <div class="row">
-        <div class="col-lg-12 d-flex justify-content-center">
-          <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <!-- <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-card">Card</li> -->
-            <!-- <li data-filter=".filter-web">Web</li> -->
-          </ul>
-        </div>
-      </div>
-
       <div class="row portfolio-container">   
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio1.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
-              <div class="portfolio-links">
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="./assets/img/myworks-1.png" alt="My Works"></div>
+            <div class="swiper-slide"><img src="./assets/img/myworks-2.png" alt="My Works"></div>
+            <div class="swiper-slide"><img src="./assets/img/myworks-3.png" alt="My Works"></div>
+            <div class="swiper-slide"><img src="./assets/img/myworks-4.png" alt="My Works"></div>
           </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
         </div>
 
       </div>
@@ -271,7 +223,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>Yashash Joyim</h3>
-            <p>O'zbekiston Horazm Bogo't O'guzrovot Izchil 24 Uy</p>
+            <p>O'zbekiston Horazm Bogo't </p>
           </div>
         </div>
 
@@ -302,39 +254,8 @@
         </div>
       </div>
 
-      <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
-        <div class="row">
-          <div class="col-md-6 form-group">
-            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-          </div>
-          <div class="col-md-6 form-group mt-3 mt-md-0">
-            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-          </div>
-        </div>
-        <div class="form-group mt-3">
-          <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-        </div>
-        <div class="form-group mt-3">
-          <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-        </div>
-        <div class="my-3">
-          <div class="loading">Loading</div>
-          <div class="error-message"></div>
-          <div class="sent-message">Your message has been sent. Thank you!</div>
-        </div>
-        <div class="text-center"><button type="submit">Send Message</button></div>
-      </form>
-
     </div>
   </section><!-- End Contact Section -->
-
-  <div class="credits">
-    <!-- All the links in the footer should remain intact. -->
-    <!-- You can delete the links only if you purchased the pro version. -->
-    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-  </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
