--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
         <ul>
           <li><a class="nav-link active" href="#header">Bosh Sahifa</a></li>
           <li><a class="nav-link" href="#about">Men Haqimda</a></li>
-          <li><a class="nav-link" href="#services">Xizmatlarim</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Aloqa</a></li>
         </ul>
@@ -90,13 +89,13 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Tajriba:</strong> <span>1-Yil Praktika</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Tajriba:</strong> <span>6-Oy oquv kurs, 2-oy Amaliyot</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Yosh:</strong> <span>18</span></li>
               </ul>
             </div>
           </div>
           <p>
-             17 Yoshimda Urgannch Shaxri Data Talim Stansiyasida Frontend Dasturlash boyicha 6 Oylik Oquv Kursini Btrganman. Sertefikatga egaman. Bosh vahtimda Frontend boyicha Praktika qlaman. Rus Tilini blaman. Ish joyim yoq 
+             17 Yoshimda Urgannch Shaxri Data Talim Stansiyasida Frontend Dasturlash boyicha 6 Oylik Oquv Kursini Btrganman. Sertefikatga egaman. Bosh vahtimda Frontend boyicha Praktika qlaman. Rus Tilini blaman. Ish joyim yoq, 1 ta proekt amaliyotda tugatidk jamoviy ish tajribam bor. Qoshmcha Vite, Material Ui , Styled Components va shunga oxshash kutubxonalarda larda ishlaganman
           </p>
         </div>
       </div>
@@ -169,18 +168,6 @@
 
   </section><!-- End About Section -->
 
-
-  <!-- ======= Services Section ======= -->
-  <section id="services" class="services">
-    <div class="container">
-
-      <div class="section-title">
-        <h2>Xizmatlarim</h2>
-        <p>Xozircha Xizmatlarim Yoq</p>
-      </div>
-    </div>
-  </section><!-- End Services Section -->
-
   <!-- ======= Portfolio Section ======= -->
   <section id="portfolio" class="portfolio">
     <div class="container">
@@ -198,6 +185,9 @@
             <div class="swiper-slide"><img src="./assets/img/myworks-2.png" alt="My Works"></div>
             <div class="swiper-slide"><img src="./assets/img/myworks-3.png" alt="My Works"></div>
             <div class="swiper-slide"><img src="./assets/img/myworks-4.png" alt="My Works"></div>
+            <div class="swiper-slide"><img src="./assets/img/myworks-5.PNG" alt="My Works"></div>
+            <div class="swiper-slide"><img src="./assets/img/myworks-6.PNG" alt="My Works"></div>
+            <div class="swiper-slide"><img src="./assets/img/myworks-7.PNG" alt="My Works"></div>
           </div>
           <div class="swiper-button-next"></div>
           <div class="swiper-button-prev"></div>
