--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Qurbonboyev Farid</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>Men Front End <span>Dasturchiman</span> O'zbekistonlik</h2>
+      <h1 class="me-title"><a href="index.html">Qurbonboyev Farid</a></h1>
+      <h2 class="me-title">Men Front End <span>Dasturchiman</span> O'zbekistonlik</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -95,7 +93,7 @@
             </div>
           </div>
           <p>
-             17 Yoshimda Urgannch Shaxri Data Talim Stansiyasida Frontend Dasturlash boyicha 6 Oylik Oquv Kursini Btrganman. Sertefikatga egaman. Bosh vahtimda Frontend boyicha Praktika qlaman. Rus Tilini blaman. Ish joyim yoq, 1 ta proekt amaliyotda tugatidk jamoviy ish tajribam bor. Qoshmcha Vite, Material Ui , Styled Components va shunga oxshash kutubxonalarda larda ishlaganman
+             Frontend Dasturlash boyicha 6 Oylik Oquv Kursini Btrganman. Sertefikatga egaman. Ish joyim yoq, 1 ta proekt amaliyotda tugatidk jamoviy ish tajribam bor. Qoshmcha Vite, Material Ui , Styled Components lar blan ishlaganman Rus Tili ortacha.
           </p>
         </div>
       </div>
@@ -174,7 +172,7 @@
 
       <div class="section-title">
         <h2>Portfolio</h2>
-        <p>My Works</p>
+        <p>Mening Ishlarim</p>
       </div>
 
       <div class="row portfolio-container">   
